--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  bloc: ^9.0.0
   file_picker: ^10.2.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   http: ^1.4.0
   http_parser: ^4.1.2
   permission_handler: ^12.0.1
